kubernetes-network/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-network
  namespace: homework
  labels: 
    app: nginx
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector: 
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        namespace: homework
    spec:
      serviceAccountName: monitoring
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - name: liveness-port
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: liveness-port
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 1
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -rf /homework/index.html"]
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: datastore
          mountPath: /homework
    # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
      - name: datastore
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
