kubernetes-network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-network-svc
  namespace: homework
  labels: 
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: nginx
