kubernetes-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-all
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage
        pathType: Prefix
        backend:
          service:
            name: kubernetes-network-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-network-svc
            port:
              number: 8000
